--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignInActivity"
-            android:label="@string/title_activity_sign_in"></activity>
+            android:name=".SignInActivity"></activity>
     </application>
 
 </manifest>
