--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
         <activity
             android:name=".SignInActivity"
             android:label="@string/title_activity_sign_in"></activity>
+        <activity
+            android:name=".reminder.DailyUpdateActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
