--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/signed_in_greeting"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".HomeActivity"></activity>
+            android:name=".PostureManagerActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".HomeActivity" />
         <activity
             android:name=".SignInActivity"
             android:label="@string/app_name">
@@ -31,9 +30,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".PreferencesActivity"
+                  android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".bluetooth.BluetoothActivity"
+                  android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".bluetooth.CalibrateActivity"
+                  android:theme="@style/AppTheme.NoActionBar" />
 
-        <receiver android:name=".reminder.AlarmNotificationReceiver" />
+        <receiver android:name=".notifications.reminder.AlarmNotificationReceiver" />
     </application>
 
 </manifest>
