--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.jjoe64:graphview:4.2.1'
+    compile 'com.firebase:firebase-jobdispatcher:0.8.4'
     testCompile 'junit:junit:4.12'
 }
 
