--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,9 @@
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".PostureManagerActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".PostureManagerActivity" />
         <activity android:name=".HomeActivity" />
         <activity
             android:name=".SignInActivity"
@@ -30,23 +29,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PreferencesActivity"
-                  android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".bluetooth.BluetoothActivity"
-                  android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".bluetooth.CalibrateActivity"
-                  android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".PreferencesActivity" />
+        <activity android:name=".bluetooth.BluetoothActivity" />
+        <activity android:name=".bluetooth.CalibrateActivity" />
 
         <receiver android:name=".notifications.reminder.AlarmNotificationReceiver" />
 
         <service
             android:exported="false"
-            android:name=".DailySync">
+            android:name=".scheduledjob.DailySync">
             <intent-filter>
                 <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
             </intent-filter>
         </service>
-        <service android:name=".scheduledjob.DailySync" />
     </application>
 
 </manifest>
