--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity
-            android:name=".PostureManagerActivity" />
+        <activity android:name=".PostureManagerActivity" />
         <activity android:name=".HomeActivity" />
         <activity
             android:name=".SignInActivity"
